plugins {
    id 'com.github.johnrengelman.shadow' version "$shadowVersion"
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

version '0.0.1-SNAPSHOT'

project.ext.mainClassName = "me.retrodaredevil.solarthing.program.SolarMain"

dependencies {
    implementation "com.github.retrodaredevil.io-lib:jSerialComm:$ioLibVersion"
    // for InfluxDB 1.X
    implementation 'org.influxdb:influxdb-java:2.22'
    // for InfluxDB 2.0 // https://github.com/influxdata/influxdb-client-java/releases
    implementation 'com.influxdb:influxdb-client-java:6.1.0'

    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion" // used for our custom error handler, otherwise not a necessary dependency
    implementation "org.apache.logging.log4j:log4j-jcl:$log4jVersion" // commons logging bridge.
    implementation "org.apache.logging.log4j:log4j-slf4j2-impl:$log4jVersion"
    implementation 'com.brsanthu:google-analytics-java:2.0.0'

    // https://github.com/slackapi/java-slack-sdk/releases
    implementation 'com.slack.api:slack-api-client:1.22.2'
    // https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket
    implementation 'org.java-websocket:Java-WebSocket:1.5.3'

    // https://mvnrepository.com/artifact/com.lexicalscope.jewelcli/jewelcli
    implementation group: 'com.lexicalscope.jewelcli', name: 'jewelcli', version: '0.8.9'

    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jul
    implementation group: 'org.apache.logging.log4j', name: 'log4j-jul', version: log4jVersion

    implementation 'info.debatty:java-string-similarity:2.0.0'

    implementation group: 'biz.paluch.logging', name: 'logstash-gelf', version: '1.15.0'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-text
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
}

shadowJar {
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': project.mainClassName
        attributes 'Multi-Release': true
    }
}

